Executor now works using a Context object rather than map, and other classes added

--- a/exception/pom.xml
+++ b/exception/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>exception</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>common-util</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
