--- a/executor/pom.xml
+++ b/executor/pom.xml
@@ -52,6 +52,14 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
         </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>common-util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>operation</artifactId>
+        </dependency>
 
     </dependencies>
 
