--- a/operation/pom.xml
+++ b/operation/pom.xml
@@ -28,6 +28,18 @@
     <artifactId>operation</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>uk.gov.gchq.koryphe</groupId>
+            <artifactId>core</artifactId>
+            <version>${koryphe.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.koryphe</groupId>
+            <artifactId>core</artifactId>
+            <version>${koryphe.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
