--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <modules>
+        <module>common-util</module>
         <module>serialisation</module>
         <module>exception</module>
-        <module>common-util</module>
-        <!--<module>operation</module>-->
+        <module>operation</module>
         <module>executor</module>
         <module>proxy-executor</module>
         <module>federation-executor</module>
@@ -37,8 +37,8 @@
         <!--<shaded.jar.phase>package</shaded.jar.phase>-->
 
         <java.version>1.8</java.version>
-        <!--<maven.compiler.source>1.8</maven.compiler.source>-->
-        <!--<maven.compiler.target>1.8</maven.compiler.target>-->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <!--<scala.version>2.11</scala.version>-->
         <!--<scala.minor.version>2.11.12</scala.minor.version>-->
 
@@ -151,6 +151,11 @@
         <dependencies>
             <dependency>
                 <groupId>uk.gov.gchq.maestro</groupId>
+                <artifactId>common-util</artifactId>
+                <version>${version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.gov.gchq.maestro</groupId>
                 <artifactId>exception</artifactId>
                 <version>${version}</version>
             </dependency>
@@ -162,11 +167,6 @@
             <dependency>
                 <groupId>uk.gov.gchq.maestro</groupId>
                 <artifactId>serialisation</artifactId>
-                <version>${version}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.gov.gchq.maestro</groupId>
-                <artifactId>common-util</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
@@ -193,6 +193,13 @@
                 <groupId>uk.gov.gchq.koryphe</groupId>
                 <artifactId>core</artifactId>
                 <version>${koryphe.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.gov.gchq.koryphe</groupId>
+                <artifactId>core</artifactId>
+                <version>${koryphe.version}</version>
+                <type>test-jar</type>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
