fixes to make Maestro build

--- a/common-util/pom.xml
+++ b/common-util/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
         <dependency>
             <groupId>uk.gov.gchq.maestro</groupId>
-            <artifactId>exception</artifactId>
+            <artifactId>serialisation</artifactId>
         </dependency>
     </dependencies>
 
