--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>executor</module>
         <module>proxy-executor</module>
         <module>federation-executor</module>
+        <module>python-executor</module>
     </modules>
 
     <name>${project.groupId}:${project.artifactId}</name>
