--- a/python-executor/pom.xml
+++ b/python-executor/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>common-util</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>executor</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
