--- a/federation-executor/pom.xml
+++ b/federation-executor/pom.xml
@@ -31,10 +31,12 @@
         <dependency>
             <groupId>uk.gov.gchq.maestro</groupId>
             <artifactId>executor</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.gov.gchq.maestro</groupId>
             <artifactId>executor</artifactId>
+            <version>${project.parent.version}</version>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
