--- a/operation/pom.xml
+++ b/operation/pom.xml
@@ -31,10 +31,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>uk.gov.gchq.maestro</groupId>
-            <artifactId>serialisation</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.gov.gchq.koryphe</groupId>
