--- a/python-executor/pom.xml
+++ b/python-executor/pom.xml
@@ -26,6 +26,11 @@
 
     <artifactId>python-executor</artifactId>
 
+    <properties>
+        <jgit.version>5.3.0.201903130848-r</jgit.version>
+        <docker.client.version>8.15.1</docker.client.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>uk.gov.gchq.maestro</groupId>
@@ -35,6 +40,17 @@
         <dependency>
             <groupId>uk.gov.gchq.maestro</groupId>
             <artifactId>executor</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>${jgit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.spotify</groupId>
+            <artifactId>docker-client</artifactId>
+            <version>${docker.client.version}</version>
         </dependency>
     </dependencies>
 
