--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>data</module>
         <module>operation</module>
         <module>executor</module>
+        <module>library</module>
         <module>proxy-executor</module>
         <module>federation-executor</module>
     </modules>
@@ -58,6 +59,7 @@
         <jackson.max.version>2.9.6</jackson.max.version>
         <jackson.min.version>2.3.1</jackson.min.version>
         <jackson.version>${jackson.compile.version}</jackson.version>
+        <jcs.version>2.1</jcs.version>
 
         <commons-io.version>2.4</commons-io.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
@@ -132,13 +134,6 @@
             </dependency>
             <dependency>
                 <groupId>uk.gov.gchq.maestro</groupId>
-                <artifactId>common-util</artifactId>
-                <version>${project.parent.version}</version>
-                <type>test-jar</type>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>uk.gov.gchq.maestro</groupId>
                 <artifactId>federation-executor</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
@@ -161,6 +156,11 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>${slf4j.api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-jcs-core</artifactId>
+                <version>${jcs.version}</version>
             </dependency>
             <dependency>
                 <groupId>uk.gov.gchq.koryphe</groupId>
