--- a/federation-executor/pom.xml
+++ b/federation-executor/pom.xml
@@ -39,6 +39,12 @@
             <version>${project.parent.version}</version>
             <scope>test</scope>
             <type>test-jar</type>
+        </dependency><dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>operation</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>test</scope>
+            <type>test-jar</type>
         </dependency>
     </dependencies>
 
