--- a/proxy-executor/pom.xml
+++ b/proxy-executor/pom.xml
@@ -32,6 +32,38 @@
             <groupId>uk.gov.gchq.maestro</groupId>
             <artifactId>executor</artifactId>
         </dependency>
+
+        <!--Test Dependency-->
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>executor</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>operation</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>common-util</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>rest-api</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>core-rest</artifactId>
+            <type>test-jar</type>
+        </dependency>
+
     </dependencies>
 
 </project>
