--- a/example/basic-rest/src/main/resources/accumulo/store.properties
+++ b/example/basic-rest/src/main/resources/accumulo/store.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2017-2019 Crown Copyright
+# Copyright 2019 Crown Copyright
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -14,13 +14,12 @@
 # limitations under the License.
 #
 # Accumulo store config
-gaffer.store.class=uk.gov.gchq.gaffer.accumulostore.MockAccumuloStore
 accumulo.instance=someInstanceName
 accumulo.zookeepers=aZookeeper
 accumulo.user=user01
 accumulo.password=password
 # General store config
-gaffer.cache.service.class=uk.gov.gchq.gaffer.cache.impl.JcsCacheService
-gaffer.store.job.tracker.enabled=true
-gaffer.store.operation.declarations=accumulo/ResultCacheExportOperations.json
+maestro.cache.service.class=uk.gov.gchq.gaffer.cache.impl.JcsCacheService
+maestro.store.job.tracker.enabled=true
+maestro.store.operation.declarations=accumulo/ResultCacheExportOperations.json
 
