--- a/example/basic-rest/src/main/webapp/WEB-INF/web.xml
+++ b/example/basic-rest/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!--
-  ~ Copyright 2017-2019 Crown Copyright
+  ~ Copyright 2019 Crown Copyright
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -23,17 +23,18 @@
 
     <!-- Copied from Gaffer rest api web.xml-->
     <listener>
-        <listener-class>uk.gov.gchq.gaffer.rest.ServletLifecycleListener</listener-class>
+        <listener-class>uk.gov.gchq.maestro.rest.ServletLifecycleListener
+        </listener-class>
     </listener>
 
     <servlet>
-        <servlet-name>Gaffer REST example v1</servlet-name>
+        <servlet-name>Maestro REST example v1</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer
         </servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
             <param-value>
-                uk.gov.gchq.gaffer.rest.application.ApplicationConfigV1
+                uk.gov.gchq.maestro.rest.application.ApplicationConfig
             </param-value>
         </init-param>
         <init-param>
@@ -48,46 +49,15 @@
         <async-supported>true</async-supported>
     </servlet>
 
-    <servlet>
-        <servlet-name>Gaffer REST example v2</servlet-name>
-        <servlet-class>org.glassfish.jersey.servlet.ServletContainer
-        </servlet-class>
-        <init-param>
-            <param-name>javax.ws.rs.Application</param-name>
-            <param-value>
-                uk.gov.gchq.gaffer.rest.application.ApplicationConfigV2
-            </param-value>
-        </init-param>
-        <init-param>
-            <param-name>swagger.scanner.id</param-name>
-            <param-value>v2</param-value>
-        </init-param>
-        <init-param>
-            <param-name>swagger.config.id</param-name>
-            <param-value>v2</param-value>
-        </init-param>
-        <load-on-startup>2</load-on-startup>
-        <async-supported>true</async-supported>
-    </servlet>
-
     <servlet-mapping>
-        <servlet-name>Gaffer REST example v1</servlet-name>
+        <servlet-name>Maestro REST example v1</servlet-name>
         <url-pattern>/v1/*</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>Gaffer REST example v2</servlet-name>
-        <url-pattern>/v2/*</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>Gaffer REST example v2</servlet-name>
-        <url-pattern>/latest/*</url-pattern>
     </servlet-mapping>
 
     <filter>
         <filter-name>OriginFilter</filter-name>
-        <filter-class>uk.gov.gchq.gaffer.rest.filter.OriginFilter</filter-class>
+        <filter-class>uk.gov.gchq.maestro.rest.filter.OriginFilter
+        </filter-class>
         <async-supported>true</async-supported>
     </filter>
 
