--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>proxy-executor</module>
         <module>federation-executor</module>
         <module>example</module>
+        <module>rest-api</module>
     </modules>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -61,6 +62,8 @@
         <failsafe.version>2.18.1</failsafe.version>
 
         <koryphe.version>1.6.0</koryphe.version>
+        <javassist.version>3.19.0-GA</javassist.version>
+        <scala.minor.version>2.11.12</scala.minor.version>
         <jackson.compile.version>2.6.5</jackson.compile.version>
         <jackson.max.version>2.9.6</jackson.max.version>
         <jackson.min.version>2.3.1</jackson.min.version>
@@ -71,6 +74,7 @@
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <reflections.version>0.9.10</reflections.version>
+        <scala.version>2.11</scala.version>
 
         <!-- Maven plugins -->
         <checkstyle.plugin.version>2.17</checkstyle.plugin.version>
@@ -140,6 +144,11 @@
             </dependency>
             <dependency>
                 <groupId>uk.gov.gchq.maestro</groupId>
+                <artifactId>jcs-cache-service</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.gov.gchq.maestro</groupId>
                 <artifactId>rest-api</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
@@ -189,6 +198,16 @@
                 <artifactId>core</artifactId>
                 <version>${koryphe.version}</version>
                 <type>test-jar</type>
+            </dependency>
+            <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-library</artifactId>
+                <version>${scala.minor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>${javassist.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
