--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -24,6 +24,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <!--<packaging>war</packaging>-->
 
     <artifactId>rest-api</artifactId>
 
@@ -147,12 +148,6 @@
         </dependency>
 
         <!-- Test dependencies -->
-        <dependency>
-            <groupId>uk.gov.gchq.maestro</groupId>
-            <artifactId>common-util</artifactId>
-            <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>uk.gov.gchq.maestro</groupId>
             <artifactId>common-util</artifactId>
