--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -24,7 +24,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <!--<packaging>war</packaging>-->
+    <packaging>war</packaging>
 
     <artifactId>rest-api</artifactId>
 
