--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>operation</module>
         <module>executor</module>
         <module>rest-api</module>
+        <module>example</module>
     </modules>
 
     <name>${project.groupId}:${project.artifactId}</name>
