--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,12 @@
                 <type>test-jar</type>
             </dependency>
             <dependency>
+                <groupId>uk.gov.gchq.maestro</groupId>
+                <artifactId>core-rest</artifactId>
+                <classifier>classes</classifier>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>uk.gov.gchq.koryphe</groupId>
                 <artifactId>core</artifactId>
                 <version>${koryphe.version}</version>
