--- a/proxy-handlers/src/main/resources/remoteClientConfig2.json
+++ b/proxy-handlers/src/main/resources/remoteClientConfig2.json
@@ -1,6 +1,6 @@
 {
   "class": "uk.gov.gchq.maestro.util.Config",
-  "id" : "demoExampleExecutor",
+  "id" : "remoteClientExecutor",
   "operationHandlers": {
   }
 }
