--- a/proxy-handlers/pom.xml
+++ b/proxy-handlers/pom.xml
@@ -36,14 +36,14 @@
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-grizzly2-http</artifactId>
         </dependency>
-
-        <!--Test Dependency-->
         <dependency>
             <groupId>uk.gov.gchq.maestro</groupId>
             <artifactId>executor</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+
+        <!--Test Dependency-->
         <dependency>
             <groupId>uk.gov.gchq.maestro</groupId>
             <artifactId>operation</artifactId>
@@ -60,6 +60,17 @@
             <groupId>uk.gov.gchq.maestro</groupId>
             <artifactId>core-rest</artifactId>
             <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.maestro</groupId>
+            <artifactId>core-rest</artifactId>
+            <classifier>classes</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
