--- a/proxy-handlers/src/main/resources/remoteClientExecutorConfig.json
+++ b/proxy-handlers/src/main/resources/remoteClientExecutorConfig.json
@@ -1,5 +1,5 @@
 {
-  "class": "uk.gov.gchq.maestro.util.Config",
+  "class": "uk.gov.gchq.maestro.executor.util.Config",
   "id" : "remoteClientExecutor",
   "operationHandlers": {
   }
